[gd_scene load_steps=5 format=3 uid="uid://c7kia136qg64b"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_h7yql"]
[ext_resource type="TileSet" uid="uid://b1317f2uiakmt" path="res://resources/tilesets/tileset.tres" id="2_0eqpe"]
[ext_resource type="PackedScene" uid="uid://bolveqifgsq8c" path="res://entities/player/player.tscn" id="3_ty8fx"]
[ext_resource type="Theme" uid="uid://drr70ylap357l" path="res://ui/theme/custom_theme.tres" id="4_odorc"]

[node name="Level" type="Node2D"]
script = ExtResource("1_h7yql")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_0eqpe")

[node name="Player" parent="." instance=ExtResource("3_ty8fx")]
z_index = 1

[node name="Goals" type="Node" parent="."]

[node name="Boxes" type="Node" parent="."]

[node name="LevelCleared" type="MarginContainer" parent="."]
visible = false
z_index = 2
offset_right = 160.0
offset_bottom = 160.0
theme = ExtResource("4_odorc")

[node name="ColorRect" type="ColorRect" parent="LevelCleared"]
layout_mode = 2
color = Color(0.290196, 0.329412, 0.207843, 1)

[node name="LevelCleared" type="RichTextLabel" parent="LevelCleared/ColorRect"]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 32.0
size_flags_vertical = 4
text = "Level Cleared"
tab_size = 8

[node name="MovesMade" type="RichTextLabel" parent="LevelCleared/ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 144.0
offset_bottom = 48.0
text = "Moves Made: 0"

[node name="NextLevel" type="RichTextLabel" parent="LevelCleared/ColorRect"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 112.0
offset_right = 128.0
offset_bottom = 144.0
text = "Press Space to 
Go to Next Level"
